projekt-compiler/test/misc/unsorted/success/s_multi_use_eof.rail
$'main'(--):
 \
  \
   \      #         #
    \      \       /
     \      f     t
      \      \   /
       \      \ /
        \      v
         \     |
          ----[e]---(!e!)--\
               |           |
               \-----------/

result: false (=0)