projekt-compiler/test/misc/unsorted/fail/e_dollarsign.rail
$'main'(--):
 \
  \
   \                   #---$----------
    \                                 \
     \----$----------------------\    |
                                 |    |
                                 $    |
                                 |    $
                                 |    |
                                 \----/


Crash: Stack Underflow

-- Goes through the '$'
-- '$' acts like a rail(!)